# grixy

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  README.md  TODO.md
.github/workflows/: docs.yml  publish.yml
benches/: blit.rs  iter.rs  random_access.rs
examples/: mono-font-raster.rs  path-finding.rs  pattern-noise.rs  z-order-layout.rs
src/: buf.rs  convert.rs  core.rs  error.rs  grid.rs  impls.rs  internal.rs  lib.rs  ops.rs  prelude.rs  test.rs  transform.rs
src/buf/: array.rs  bit.rs  bits.rs  impl_as_slice.rs  impl_bytemuck.rs  impl_grid.rs  impl_iter.rs  impl_mut.rs  impl_new.rs  impl_resize.rs  impl_serde.rs  impl_slice.rs  inner_array.rs  inner_slice.rs  inner_vec.rs  iter.rs  mut.rs  slice.rs  vec.rs
src/buf/bits/: ops.rs
src/convert/: blend.rs  blended.rs  copied.rs  mapped.rs  scaled.rs  viewed.rs
src/grid/: base.rs  bounded.rs  read.rs  write.rs
src/ops/: alloc.rs  base.rs  blit_rect.rs  blit_rect_scaled.rs  bounded.rs  cell.rs  convert.rs  copy.rs  copy_rect.rs  copy_rect_scaled.rs  diff.rs  draw.rs  layout.rs  operations.rs  read.rs  unchecked.rs  write.rs
src/ops/draw/: blend.rs  blend.txt
src/ops/unchecked/: blit_rect_scaled_unchecked.rs  blit_rect_unchecked.rs  copy_rect_scaled_unchecked.rs  copy_rect_unchecked.rs  read.rs  read_unchecked.rs  trusted_size.rs  write.rs  write_unchecked.rs
src/transform/: blend.rs  blended.rs  copied.rs  mapped.rs  scaled.rs  viewed.rs
