[package]
name = "grixy"
edition = "2024"
license = "MIT OR Apache-2.0"

description = "Zero-cost 2D grids for embedded systems and graphics"
repository = "https://github.com/crates-lurey-io/grixy"
homepage = "https://github.com/crates-lurey-io/grixy"
rust-version = "1.87"
documentation = "https://docs.rs/grixy"
keywords = ["2d", "grid", "embedded", "no-std", "gamedev"]
categories = ["game-development", "mathematics", "embedded", "no-std"]
version = "0.6.0-alpha.7"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "deny"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
cargo-hack = { version = "0.6.45", locked = true }
cargo-semver-checks = { version = "0.48.0", locked = true }
flamegraph = { version = "0.6.8", locked = true, bins = ["cargo-flamegraph"] }
just = { version = "1.40.0" }

[features]
default = []
alloc = []
buffer = []
cell = []
serde = ["dep:serde", "ixy/serde"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ixy = { version = "0.6.0-alpha.5" }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
bytemuck = "1.23.1"
serde_json = "1.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
open = "5.3.2"
png = "0.17.16"
temp-dir = "0.1.16"

[profile.bench]
debug = true

[[bench]]
name = "blit"
harness = false

[[bench]]
name = "iter"
harness = false
